--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     content="kerimov orxan,orxan kerimov,kərimov orxan,orxan kərimo,orxan,Kərimov Orxan ,Kerimov Orxan,Karimov Orxan, Orxan Kərimov,Orxan Kerimov, yeni sayt yarat, blog, layiheler, instagram, facebook, html, css, javascript, react, tailwindCSS"
   />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
