--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Kərimov Orxan " />
     <meta
     name="keywords"
-    content="kerimov orxan,orxan kerimov,kərimov orxan,orxan kərimo,orxan,Kərimov Orxan ,Kerimov Orxan,Karimov Orxan, Orxan Kərimov,Orxan Kerimov, yeni sayt yarat, blog, layiheler, instagram, facebook, html, css, javascript, react, tailwindCSS"
+    content="kerimov orxan,orxan kerimov,kərimov orxan,ORXAN KƏRİMOV,KƏRİMOV ORXAN,ORXAN KERIMOV,KERIMOV ORXAN,KARIMOV ORXAN,ORXAN KARIMOV,orxan kərimo,orxan,Kərimov Orxan ,Kerimov Orxan,Karimov Orxan, Orxan Kərimov,Orxan Kerimov, yeni sayt yarat, blog, layiheler, instagram, facebook, html, css, javascript, react, tailwindCSS"
   />
  
   
